--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <title>Slice - Collab Cropper</title>
+
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="#000000" name="theme-color"/>
-    <meta
-            content="Website created using create-react-app"
-            name="description"
-    />
-    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
+
+    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <link href="%PUBLIC_URL%/apple-touch-icon.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <title>Slice</title>
+
+    <meta property="og:title" content="Slice - Collab Cropper">
+    <meta property="og:description" content="Make profile pictures for the lads <boys">
+    <meta property="og:image"
+          content="https://chito.ge/ATQ7p3a.png">
+    <meta property="og:image:secure_url"
+          content="https://chito.ge/ATQ7p3a.png">
+    <meta property="og:image:type" content="image/png">
+    <!--
+    <meta property="og:url" content="">
+    -->
+    <meta property="og:locale" content="en_US">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
