giga turbo wip + added eslint

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="/manifest.json" rel="manifest" />
 
     <meta property="og:title" content="Slice - Collab Cropper">
-    <meta property="og:description" content="Make profile pictures for the lads <boys">
+    <meta property="og:description" content="Avatar collabs have never been easier">
     <meta property="og:image" content="https://chito.ge/ATQ7p3a.png">
     <meta property="og:image:secure_url" content="https://chito.ge/ATQ7p3a.png">
     <meta property="og:image:type" content="image/png">
