--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Slice - Collab Cropper</title>
 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="description" content="Profile picture / avatar collaboration cropper.">
 
     <link href="/favicon.ico" rel="icon" />
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" />
